# linxal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  PLANS.org  README.md  discrepancies.md
docs/: index.md
docs/_posts/: 2017-04-14-linxal-0.6-released.md
examples/: matgen.rs  poly_fit.rs  poly_interp.rs  readme.rs
src/: impl_prelude.rs  least_squares.rs  lib.rs  matrix.rs  permute.rs  prelude.rs  properties.rs  solve_linear.rs  types.rs  util.rs
src/eigenvalues/: general.rs  generic.rs  mod.rs  symmetric.rs  types.rs
src/factorization/: cholesky.rs  lu.rs  mod.rs  qr.rs
src/generate/: ffi.rs  internal.rs  matgen.rs  mod.rs  types.rs
src/solve_linear/: general.rs  mod.rs  symmetric.rs  types.rs
src/svd/: general.rs  mod.rs  types.rs
src/types/: error.rs  impl_scalar.rs  matrix.rs  matrix_into.rs  mod.rs  scalar.rs
src/util/: external.rs  internal.rs  mod.rs
tests/: cholesky.rs  eigen.rs  eigen_symmetric.rs  inverse.rs  lu.rs  matgen-general.rs  matgen-symmetric.rs  matgen.rs  qr.rs  solve_linear.rs  svd.rs
