[package]
name = "rula"
version = "0.1.5"
authors = ["Mason Smith <masonium@gmail.com>"]

description = "Linear Algebra package with rust-ndarray interface"
repository = "https://github.com/masonium/rula"
documentation = "https://masonium.github.io/rustdoc/rula/"

readme = "README.md"
license = "MIT"
keywords = ["linear-algebra", "linear", "algebra", "ndarray", "matrix", "vector", "svd"]

include = ["**/*.rs", "LICENSE", "README.md", "Cargo.toml"]

[features]
default = ["openblas"]
openblas = ["blas/openblas", "lapack/openblas"]
netlib = ["blas/netlib", "lapack/netlib"]

[dependencies]
ndarray = "0.6"
num-traits = "0.1"
rand = "0.3"

[dependencies.lapack]
version = "0.11"
default-features = false

[dependencies.blas]
version = "0.15"
default-features = false
