[package]
name = "linxal"
version = "0.2.1"
authors = ["Mason Smith <masonium@gmail.com>"]

description = "Linear Algebra package with rust-ndarray interface"
repository = "https://github.com/masonium/linxal"
documentation = "https://masonium.github.io/rustdoc/linxal/"

readme = "README.md"
license = "MIT"
keywords = ["linear-algebra", "ndarray", "matrix"]

include = ["**/*.rs", "LICENSE", "README.md", "CHANGELOG.md", "Cargo.toml"]

[features]
default = ["openblas"]
openblas = ["blas/openblas", "lapack/openblas"]
netlib = ["blas/netlib", "lapack/netlib"]

[dependencies]
ndarray = "0.6"
num-traits = "0.1"
rand = "0.3"

[dependencies.lapack]
version = "0.11"
default-features = false

[dependencies.blas]
version = "0.15"
default-features = false
