[package]
name = "linxal"
version = "0.3.0"
authors = ["Mason Smith <masonium@gmail.com>"]

description = "Linear Algebra package with rust-ndarray interface"
repository = "https://github.com/masonium/linxal"
documentation = "https://masonium.github.io/rustdoc/linxal/"

readme = "README.md"
license = "MIT"
keywords = ["linear-algebra", "ndarray", "matrix"]

include = ["**/*.rs", "LICENSE", "README.md", "CHANGELOG.md", "discrepancies.md", "Cargo.toml"]

[features]
default = ["openblas"]
openblas = ["blas/openblas", "lapack/openblas"]
netlib = ["blas/netlib", "lapack/netlib"]
openblas-system = ["blas/openblas", "lapack/openblas", "openblas-src/system"]
netlib-system = ["blas/netlib", "lapack/netlib", "netlib-src/system"]

[dependencies]
ndarray = "0.7"
num-traits = "0.1"
rand = "0.3"
libc = "0.2"

[dev-dependencies]
itertools = "0.5"

[dependencies.lapack]
version = "0.11"
default-features = false

[dependencies.blas]
version = "0.15"
default-features = false

[dependencies.lapack-sys]
version = "0.11"
default-features = false

[dependencies.blas-sys]
version = "0.6"
default-features = false

[dependencies.openblas-src]
version = "0.5"
default-features = false
optional = true

[dependencies.netlib-src]
version = "0.6"
default-features = false
optional = true
